[package]
name = "clp"
version = "0.1.0"
authors = ["Johan Oelrich <johan@oelrich.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
[dev-dependencies]
quickcheck = "0.8.5"
quickcheck_macros = "0.8.0"