[package]
name = "clp"
version = "0.1.0"
authors = ["Johan Oelrich <johan@oelrich.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"